--- a/Resources/administration/src/app/component/form/sw-text-editor-toolbar/sw-text-editor-toolbar.scss
+++ b/Resources/administration/src/app/component/form/sw-text-editor-toolbar/sw-text-editor-toolbar.scss
@@ -4,7 +4,7 @@ $sw-text-editor-toolbar-dark-grey-start: $color-gradient-dark-gray-start;
 $sw-text-editor-toolbar-dark-grey-end: $color-gradient-dark-gray-end;
 $sw-text-editor-toolbar-boxed-mode: $color-light-gray;
 $sw-text-editor-toolbar-arrow-shadow: rgba(120, 138, 155, 0.5);
-$sw-text-editor-toolbar-item-color: #d1d9e0;
+$sw-text-editor-toolbar-item-color: $color-steam-cloud;
 $sw-text-editor-toolbar-item-color-boxed: #9aa8b5;
 $sw-text-editor-toolbar-item-child-color: #52667a;
 $sw-text-editor-toolbar-item-child-border: $color-steam-cloud;
@@ -28,7 +28,8 @@ $sw-text-editor-toolbar-item-child-shadow: rgba(120, 138, 155, 0.5);
         content: '';
         position: absolute;
         bottom: -5px;
-        right: 50%;
+        left: var(--left);
+        right: var(--right);
         height: 8px;
         width: 8px;
         transform: rotate(45deg);
@@ -56,7 +57,7 @@ $sw-text-editor-toolbar-item-child-shadow: rgba(120, 138, 155, 0.5);
         cursor: pointer;
         position: relative;
         height: 36px;
-        width: 36px;
+        width: 30px;
         display: flex;
         align-items: center;
         justify-content: center;
