NEXT-2950 Added clear all notifications for the current user action

--- a/Resources/administration/src/app/component/utils/sw-notification-center/sw-notification-center.html.twig
+++ b/Resources/administration/src/app/component/utils/sw-notification-center/sw-notification-center.html.twig
@@ -46,35 +46,35 @@
             </div>
         {% endblock %}
         {% block sw_notification_center_delete_modal %}
-        <sw-modal v-if="showDeleteModal"
-                  @modal-close="onCloseDeleteModal"
-                  :title="$tc('global.notification-center.deleteModal.title')"
-                  variant="small">
-            {% block sw_notification_center_delete_modal_confirm_delete_text %}
-            <p class="sw_notification_center__confirm-delete-text">
-                {{ $tc('global.notification-center.deleteModal.textConfirm') }}
-            </p>
-            {% endblock %}
-
-            {% block sw_notification_center_delete_modal_footer %}
-            <template slot="modal-footer">
-                {% block sw_notification_center_delete_modal_cancel %}
-                <sw-button @click="onCloseDeleteModal"
-                           size="small">
-                    {{ $tc('global.notification-center.deleteModal.cancel') }}
-                </sw-button>
+            <sw-modal v-if="showDeleteModal"
+                      @modal-close="onCloseDeleteModal"
+                      :title="$tc('global.notification-center.deleteModal.title')"
+                      variant="small">
+                {% block sw_notification_center_delete_modal_confirm_delete_text %}
+                    <p class="sw_notification_center__confirm-delete-text">
+                        {{ $tc('global.notification-center.deleteModal.textConfirm') }}
+                    </p>
                 {% endblock %}
 
-                {% block sw_notification_center_delete_modal_confirm %}
-                <sw-button @click="onConfirmDelete"
-                           variant="primary"
-                           size="small">
-                    {{ $tc('global.notification-center.deleteModal.delete') }}
-                </sw-button>
+                {% block sw_notification_center_delete_modal_footer %}
+                    <template #modal-footer>
+                            {% block sw_notification_center_delete_modal_cancel %}
+                            <sw-button @click="onCloseDeleteModal"
+                                       size="small">
+                                {{ $tc('global.notification-center.deleteModal.cancel') }}
+                            </sw-button>
+                        {% endblock %}
+
+                        {% block sw_notification_center_delete_modal_confirm %}
+                            <sw-button @click="onConfirmDelete"
+                                       variant="primary"
+                                       size="small">
+                                {{ $tc('global.notification-center.deleteModal.delete') }}
+                            </sw-button>
+                        {% endblock %}
+                    </template>
                 {% endblock %}
-            </template>
-            {% endblock %}
-        </sw-modal>
+            </sw-modal>
         {% endblock %}
     </sw-context-button>
 {% endblock %}
