NTR - Add custom paste handler

--- a/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/Resources/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -27,6 +27,7 @@
                              :contenteditable="true"
                              spellcheck="false"
                              @focus="onFocus"
+                             @paste="onPaste"
                              @keyup="onContentChange"
                              tabindex="-1"
                              v-html="$sanitize(content)">
