--- a/Resources/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select-rule-create/sw-select-rule-create.html.twig
@@ -34,7 +34,8 @@
         {% block sw_select_rule_create_rule_modal %}
             <sw-rule-modal v-if="showRuleModal"
                            @save="onSaveRule"
-                           @modal-close="onCloseRuleModal">
+                           @modal-close="onCloseRuleModal"
+                           :allowedRuleScopes="['cart', 'checkout', 'global']">
             </sw-rule-modal>
         {% endblock %}
     </div>
