--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -17,7 +17,7 @@
                                        :condition="child"
                                        :level="level + 1"
                                        :parentDisabledDelete="disabledDeleteButton"
-                                       @delete-condition="onDeleteCondition"
+                                       @condition-delete="onDeleteCondition"
                                        @create-before="createPlaceholderBefore"
                                        @create-after="createPlaceholderAfter">
                             </component>
