--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-weight-of-cart/sw-condition-weight-of-cart.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-weight-of-cart/sw-condition-weight-of-cart.html.twig
@@ -1,6 +1,6 @@
 {% block sw_condition_base_fields %}
     {% block sw_condition_weight_of_cart_field_operator %}
-        <sw-condition-operator-select operatorSetName="string"
+        <sw-condition-operator-select operatorSetName="number"
                                       v-model="condition.value.operator">
         </sw-condition-operator-select>
     {% endblock %}
