--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
@@ -145,6 +145,7 @@
                                  :ruleId="priceRuleId"
                                  :priceRule="priceRule"
                                  :priceRuleStore="priceRuleStore"
+                                 :allowedRuleScopes="['cart', 'checkout', 'global']"
                                  @save="onSavePriceRule"
                                  @modal-close="onClosePriceRuleModal">
             </sw-price-rule-modal>
