--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -19,31 +19,30 @@
 
         {% block sw_order_detail_actions %}
             <template slot="smart-bar-actions">
+                {% block sw_order_detail_actions_abort %}
+                    <sw-button v-if="isEditing" :disabled="order.isLoading" @click="onCancelEditing">
+                        {{ $tc('sw-product.detail.buttonCancel') }}
+                    </sw-button>
+                {% endblock %}
 
-                <sw-button-group splitButton v-if="isEditing" :disabled="order.isLoading">
-                    {% block sw_order_detail_actions_save %}
-                        <sw-button variant="primary"
-                            @click ="onSave"
-                            class="sw-order-detail__save_button">
-                            {{ $tc('sw-order.detail.buttonSave') }}
-                        </sw-button>
-                    {% endblock %}
 
-                    <sw-context-button>
-                        <sw-button square slot="button" variant="primary" class="sw-media-upload__button-context-menu">
-                            <sw-icon name="small-arrow-medium-down" size="16"></sw-icon>
-                        </sw-button>
+                {% block sw_order_detail_actions_edit %}
+                    <sw-button v-if="!isEditing" :disabled="order.isLoading" variant="primary" @click="onStartEditing">
+                        {{ $tc('sw-order.detail.buttonEdit') }}
+                    </sw-button>
+                {% endblock %}
 
-                        <sw-context-menu-item @click ="onCancelEditing">
-                            {{ $tc('sw-order.detail.buttonCancel') }}
-                        </sw-context-menu-item>
-                    </sw-context-button>
-                </sw-button-group>
-
-                <sw-button v-if="!isEditing" :disabled="order.isLoading" variant="primary" @click="onStartEditing">
-                    {{ $tc('sw-order.detail.buttonEdit') }}
-                </sw-button>
-
+                {% block sw_order_detail_actions_save %}
+                    <sw-button
+                            v-if="isEditing"
+                            class="sw-order-detail__save_button"
+                            :isLoading="order.isLoading"
+                            :disabled="disableSaving"
+                            variant="primary"
+                            @click.prevent="onSave">
+                        {{ $tc('sw-order.detail.buttonSave') }}
+                    </sw-button>
+                {% endblock %}
             </template>
         {% endblock %}
 
