NEXT-2914 - Fix custom fields and use new select components for custom fields

--- a/Resources/administration/src/app/component/form/sw-custom-field-set-renderer/sw-custom-field-set-renderer.html.twig
+++ b/Resources/administration/src/app/component/form/sw-custom-field-set-renderer/sw-custom-field-set-renderer.html.twig
@@ -62,7 +62,7 @@
                                 <sw-button
                                         variant="primary"
                                         size="small"
-                                        @click="$emit('sw-custom-field-set-renderer-save')">
+                                        @click="$emit('save')">
                                     {{ $tc('sw-custom-field-set-renderer.general.labelButtonSave') }}
                                   </sw-button>
                             {% endblock %}
