--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -287,7 +287,7 @@
             <sw-custom-field-set-renderer
                     :entity="item"
                     variant="media-collapse"
-                    @sw-custom-field-set-renderer-save="item.save()"
+                    @save="onSaveCustomFields(item)"
                     :sets="customFieldSets">
             </sw-custom-field-set-renderer>
         {% endblock %}
