NEXT-2937 - Add cart settings

--- a/Resources/administration/src/module/sw-settings-cart/page/sw-settings-cart/sw-settings-cart.html.twig
+++ b/Resources/administration/src/module/sw-settings-cart/page/sw-settings-cart/sw-settings-cart.html.twig
@@ -1,25 +1,25 @@
-{% block sw_settings_basic_information_index %}
-    <sw-page class="sw-settings-basic-information">
+{% block sw_settings_cart_index %}
+    <sw-page class="sw-settings-cart">
 
-        {% block sw_settings_basic_information_search_bar %}
+        {% block sw_settings_cart_search_bar %}
             <template slot="search-bar">
                 <sw-search-bar>
                 </sw-search-bar>
             </template>
         {% endblock %}
 
-        {% block sw_settings_basic_information_smart_bar_header %}
+        {% block sw_settings_cart_smart_bar_header %}
             <template slot="smart-bar-header">
-                {% block sw_settings_basic_information_smart_bar_header_title %}
+                {% block sw_settings_cart_smart_bar_header_title %}
                     <h2>
-                        {% block sw_settings_basic_information_smart_bar_header_title_text %}
+                        {% block sw_settings_cart_smart_bar_header_title_text %}
                                 {{ $tc('sw-settings.index.title') }}
                                 <sw-icon name="small-arrow-medium-right" small>
                                 </sw-icon>
-                                {{ $tc('sw-settings-basic-information.general.textHeadline') }}
+                                {{ $tc('sw-settings-cart.general.textHeadline') }}
                         {% endblock %}
 
-                        {% block sw_settings_basic_information_smart_bar_header_amount %}
+                        {% block sw_settings_cart_smart_bar_header_amount %}
                             <span v-if="false" class="sw-page__smart-bar-amount">
                                 ({{ total }})
                             </span>
@@ -29,31 +29,31 @@
             </template>
         {% endblock %}
 
-            {% block sw_settings_basic_information_smart_bar_actions %}
-                <template slot="smart-bar-actions">
-                    {% block sw_settings_basic_information_actions_save %}
-                        <sw-button-process
-                                class="sw-settings-basic-information__save-action"
+        {% block sw_settings_cart_smart_bar_actions %}
+            <template slot="smart-bar-actions">
+                {% block sw_settings_cart_actions_save %}
+                    <sw-button-process
+                                class="sw-settings-cart__save-action"
                                 :isLoading="isLoading"
                                 :processSuccess="isSaveSuccessful"
                                 :disabled="isLoading"
                                 variant="primary"
                                 @process-finish="saveFinish"
                                 @click="onSave">
-                            {{ $tc('sw-settings-basic-information.general.buttonSave') }}
-                        </sw-button-process>
-                    {% endblock %}
-                </template>
-            {% endblock %}
+                        {{ $tc('sw-settings-cart.general.buttonSave') }}
+                    </sw-button-process>
+                {% endblock %}
+            </template>
+        {% endblock %}
 
-        {% block sw_settings_basic_information_content %}
+        {% block sw_settings_cart_content %}
             <template slot="content">
                 <sw-card-view>
-                   <sw-system-config
+                    <sw-system-config
                             ref="systemConfig"
                             salesChannelSwitchable
-                            domain="core.basicInformation">
-                   </sw-system-config>
+                            domain="core.cart">
+                    </sw-system-config>
                 </sw-card-view>
             </template>
         {% endblock %}
