--- a/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.html.twig
+++ b/Resources/administration/src/app/component/grid/sw-pagination/sw-pagination.html.twig
@@ -37,7 +37,13 @@
 
         {% block sw_pagination_per_page_selection %}
             <div class="sw-pagination__per-page" v-if="steps.length > 1">
-                <sw-field type="select" name="perPage" :label="$tc('global.sw-pagination.labelItemsPerPage')" v-model.number="perPage" @change="onPageSizeChange">
+                <sw-field type="select"
+                          size="small"
+                          name="perPage"
+                          :label="$tc('global.sw-pagination.labelItemsPerPage')"
+                          :value="Number.toString(perPage)"
+                          aside
+                          @change="onPageSizeChange">
                     <option v-for="step in possibleSteps" :value="step">{{ step }}</option>
                 </sw-field>
             </div>
