--- a/Resources/administration/src/app/component/form/field-base/sw-contextual-field/sw-contextual-field.scss
+++ b/Resources/administration/src/app/component/form/field-base/sw-contextual-field/sw-contextual-field.scss
@@ -9,13 +9,13 @@ $sw-field-transition: border-color 0.3s ease-out;
 
     .sw-field__addition {
         display: flex;
-        min-width: 50px;
         flex-shrink: 0;
+        justify-items: center;
+        min-width: 50px;
         background: $color-iron;
         border-left: 1px solid $color-steam-cloud;
         border-right: none;
         line-height: 22px;
-        text-align: center;
         padding: 12px 15px;
         font-size: $font-size-small;
         color: $color-gutenberg;
