NEXT-2973 - Split Settings UI

--- a/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.html.twig
+++ b/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.html.twig
@@ -24,7 +24,7 @@
                 </button>
             {% endblock %}
 
-            <div class="sw-tabs__custom-Content">
+            <div class="sw-tabs__custom-content">
                 {% block sw_tabs_custom_content %}
                     <slot name="content" :active="active"></slot>
                 {% endblock %}
