--- a/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.scss
+++ b/Resources/administration/src/app/component/base/sw-tabs/sw-tabs.scss
@@ -73,7 +73,7 @@ $sw-side-navigation-item-link-color: $color-gutenberg;
         }
     }
 
-    .sw-tabs__custom-Content {
+    .sw-tabs__custom-content {
         padding: 20px 0;
     }
 
